<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        android:layout_margin="@dimen/margin_medium">
        <LinearLayout
            android:id="@+id/ll_good_personality"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">
            <com.padc.beauty.components.DynamicHeightImageView
                android:id="@+id/iv_personality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/develop_a_good_personality_step1" />
            <com.padc.beauty.components.MMTextView
                android:id="@+id/tv_personality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:text="@string/good_personality"
                style="@style/PersonalityTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/personality_interview"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">
            <com.padc.beauty.components.DynamicHeightImageView
                android:id="@+id/iv_personalityinterview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/personality_interview" />
            <com.padc.beauty.components.MMTextView
                android:id="@+id/tv_personalityinterview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:text="@string/personality_interview"
                style="@style/PersonalityTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">
            <com.padc.beauty.components.DynamicHeightImageView
                android:id="@+id/iv_caringforothers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/develop_a_good_personality_step5"
                />
            <com.padc.beauty.components.MMTextView
                android:id="@+id/tv_caringforother"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:text="@string/caring_for_other"
                style="@style/PersonalityTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">
            <com.padc.beauty.components.DynamicHeightImageView
                android:id="@+id/iv_buildingconfidence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/develop_a_good_personality_step9"
                />
            <com.padc.beauty.components.MMTextView
                android:id="@+id/tv_buildingconfidence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:text="@string/caring_for_other"
                style="@style/buildingconfidence" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>